write in README and Human.txt and make base of interface

--- a/index.html
+++ b/index.html
@@ -23,6 +23,42 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
+  <main>
+    <section id="gameBegin">
+      <div class="">
+        <img src="" alt="start image">
+        <form class="" onsubmit="return false" action="index.html" method="post">
+          <input type="text" name="userName" value="">
+          <input type="submit" name="envoyer" value="OK">
+        </form>
+        <h2 id="score"><span id="userName"></span> 0 Ordi 0</p>
+
+      </div>
+    </section>
+
+    <section id="gameStart" class="gameStart">
+      <div class="">
+        <img src="img/folamiNormal.gif" alt="position normal">
+        <div class="talkPc">
+          <div class="bubble">
+
+          </div>
+          <p>Let's play !</p>
+        </div>
+      </div>
+
+      <div class="">
+        <img id="rock" class="choice" src="img/rock.png" alt="pierre">
+        <img id="paper" class="choice" src="img/paper.png" alt="papier">
+        <img id="scissors" class="choice" src="img/scissors.png" alt="ciseaux">
+      </div>
+
+    </section>
+
+    <section id="gameEnd">
+
+    </section>
+  </main>
 
 
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
