--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <input type="text" name="userName" value="">
           <input type="submit" name="envoyer" value="OK">
         </form>
-        <h2 id="score"><span id="userName"></span> 0 Ordi 0</p>
+        <h2 id="score"><span>Score</span> <span id="userName"></span> 0 Folami 0</h2>
 
       </div>
     </section>
@@ -56,7 +56,7 @@
     </section>
 
     <section id="gameEnd">
-
+      <img src="img/folami.gif" alt="folami Win !">
     </section>
   </main>
 
