add provisoir picture

--- a/index.html
+++ b/index.html
@@ -23,9 +23,14 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
+
   <main>
+
     <section id="gameBegin">
-      <div class="">
+      <h1>Pierre, feuille, ciseaux !</h1>
+
+      <div>
+        <p>Quel est ton pseudo ?</p>
         <img src="" alt="start image">
         <form class="" onsubmit="return false" action="index.html" method="post">
           <input type="text" name="userName" value="">
@@ -56,6 +61,8 @@
     </section>
 
     <section id="gameEnd">
+      <p></p>
+      <a href="index.html" target="_self">Recommencer</a>
       <img src="img/folami.gif" alt="folami Win !">
     </section>
   </main>
