begin responsive and define colors

--- a/index.html
+++ b/index.html
@@ -30,13 +30,15 @@
       <h1>Pierre, feuille, ciseaux !</h1>
 
       <div>
-        <p>Quel est ton pseudo ?</p>
         <img src="" alt="start image">
+
+        <p>Quel est ton pseudo ?</p>
+
         <form class="" onsubmit="return false" action="index.html" method="post">
-          <input type="text" name="userName" value="">
+          <input type="text" name="userName" value="" autofocus autocomplete="off">
           <input type="submit" name="envoyer" value="OK">
         </form>
-        <h2 id="score"><span>Score</span> <span id="userName"></span> 0 Folami 0</h2>
+        <h2 id="score"><span>Score:</span> <span id="userName"></span> 0 Folami 0</h2>
 
       </div>
     </section>
