mobile respnsive done and make some details

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <p>Quel est ton pseudo ?</p>
 
         <form class="" onsubmit="return false" action="index.html" method="post">
-          <input type="text" name="userName" value="" autofocus autocomplete="off">
+          <input type="text" name="userName" value="" autofocus>
           <input type="submit" name="envoyer" value="OK">
         </form>
         <h2 id="score"><span>Score:</span> <span id="userName"></span> 0 Folami 0</h2>
@@ -45,12 +45,12 @@
 
     <section id="gameStart" class="gameStart">
       <div class="">
-        <img src="img/folamiNormal.gif" alt="position normal">
+        <img src="img/19.png" alt="position normal">
         <div class="talkPc">
           <div class="bubble">
 
           </div>
-          <p>Let's play !</p>
+          <p>Fait ton choix !</p>
         </div>
       </div>
 
@@ -62,10 +62,11 @@
 
     </section>
 
-    <section id="gameEnd">
-      <p></p>
+    <section id="gameEnd" class="gameEnd">
+      <h2></h2>
       <a href="index.html" target="_self">Recommencer</a>
       <img src="img/folami.gif" alt="folami Win !">
+
     </section>
   </main>
 
