add picture finish and integer in main.js and index.html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <h1>Pierre, feuille, ciseaux !</h1>
 
       <div>
-        <img src="" alt="start image">
+        <img src="img/folami.gif" alt="start image">
 
         <p>Quel est ton pseudo ?</p>
 
@@ -45,7 +45,7 @@
 
     <section id="gameStart" class="gameStart">
       <div class="">
-        <img src="img/19.png" alt="position normal">
+        <img src="img/folamiNormal.gif" alt="position normal">
         <div class="talkPc">
           <div class="bubble">
 
@@ -65,7 +65,7 @@
     <section id="gameEnd" class="gameEnd">
       <h2></h2>
       <a href="index.html" target="_self">Recommencer</a>
-      <img src="img/folami.gif" alt="folami Win !">
+      <img class="endImg" src="img/folami.gif" alt="folami Win !">
 
     </section>
   </main>
