check validator and clean css

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <div class="bubble">
 
           </div>
-          <p>Fait ton choix !</p>
+          <h4>Fait ton choix !</h4>
         </div>
       </div>
 
@@ -63,7 +63,7 @@
     </section>
 
     <section id="gameEnd" class="gameEnd">
-      <h2></h2>
+      <h2>Fin</h2>
       <a href="index.html" target="_self">Recommencer</a>
       <img class="endImg" src="img/folami.gif" alt="folami Win !">
 
